Add time-slice-based filtering and enhance data handling
Introduced time-slice-based filtering for DataView and DataDownload to improve data granularity and control. Enhanced BlockSelector, GUI functionality, and added support for additional status control. Updated pom.xml to version 13.1.10.